# Radar-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.toml
.devcontainer/: Dockerfile  devcontainer.json  fish_install.yaml  zshrc
cmake/: FindGlog.cmake  FindTensorRT.cmake
modules/common/: CMakeLists.txt
modules/common/include/srm/: common.hpp
modules/common/include/srm/common/: config.hpp  tags.hpp
modules/core/: CMakeLists.txt
modules/core/src/: core-base.cpp  fps-controller.cpp
modules/nn/: CMakeLists.txt
modules/nn/include/srm/: nn.hpp
modules/nn/include/srm/nn/: yolo.h
modules/nn/src/: armor.cpp
src/radar_2024/: CMakeLists.txt  config.toml  main.cpp  offlineCloudPoint.cpp  package.xml
src/radar_2024/launch/: test.launch
src/radar_2024/modules/common/: CMakeLists.txt
src/radar_2024/modules/common/include/srm/common/: buffer.hpp  config.hpp  factory.hpp
src/radar_2024/modules/core/: CMakeLists.txt
src/radar_2024/modules/core/include/srm/: core.hpp
src/radar_2024/modules/core/include/srm/core/: core-base.h  fps-controller.h
src/radar_2024/modules/core/src/: core-base.cpp  core-single.cpp
src/radar_2024/modules/lidar/: CMakeLists.txt
src/radar_2024/modules/lidar/include/srm/: lidar.hpp
src/radar_2024/modules/lidar/include/srm/lidar/: depth-img.h  livox.h
src/radar_2024/modules/lidar/src/: depth-img.cpp  livox.cpp
src/radar_2024/modules/locate/: CMakeLists.txt
src/radar_2024/modules/locate/include/srm/: locate.hpp
src/radar_2024/modules/locate/include/srm/locate/: locate.h
src/radar_2024/modules/locate/src/: locate.cpp
src/radar_2024/modules/nn/include/srm/: nn.hpp
src/radar_2024/modules/nn/include/srm/nn/: cuda-help.h  detector.h  info.hpp  yolo.h
src/radar_2024/modules/nn/src/: armor-nn.cpp  car-nn.cpp  car.cpp  detector.cpp  yolo.cpp
src/radar_2024/modules/video/: CMakeLists.txt
src/radar_2024/modules/video/include/srm/: video.hpp
src/radar_2024/modules/video/include/srm/video/: camera.h  frame.hpp  reader.h  writer.h
src/radar_2024/modules/video/src/: camera-hik.cpp  camera.cpp  reader-camera.cpp  reader-file.cpp  writer.cpp
src/radar_2024/modules/viewer/: CMakeLists.txt  video.py
src/radar_2024/modules/viewer/include/srm/: viewer.hpp
src/radar_2024/modules/viewer/include/srm/viewer/: viewer-video.h
src/radar_2024/modules/viewer/src/: viewer-video.cpp
src/radar_2024/modules/viewer/static/: data.js  editor.js  slider.js  style.css
src/radar_2024/modules/viewer/templates/: video.html
src/radar_2024/tools/: offlineCloudPoint.cpp
